Bugfix: Timer bar jumps when toggling between times rather than resetting to zero instantly

--- a/src/components/CountdownTimer/CountdownTimerBar.module.css
+++ b/src/components/CountdownTimer/CountdownTimerBar.module.css
@@ -20,3 +20,7 @@
 	/* border-radius: 5px; */
 	transition: width 0.1s linear;
 }
+
+.no_transition {
+	transition: none !important;
+}
